--- a/public/slave.html
+++ b/public/slave.html
@@ -4,20 +4,15 @@
     	<title></title>
  	</head>
 	<body>
-		<ul id="mainList">
-			
-		</ul>
+		<input id="masterSocketID" type="hidden" value="<%= socketID %>"/>
 
     	<script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.1.4/zepto.min.js"></script>
     	<script src="/socket.io/socket.io.js"></script>
 		<script>
 			$(document).ready(function() {
-				var socket = io();
-				socket.emit( 'foobar', new Date() );
-
-				socket.on('foobar', function(msg) {
-					$('#mainList').append( $('<li>').text(msg) );
-				});
+				var socket = io(),
+				masterSocketID = $('#masterSocketID').val();
+				socket.emit( 'addSlaveUser', masterSocketID );
 			});
 		</script>
 	</body>
