--- a/public/master.html
+++ b/public/master.html
@@ -1,14 +1,25 @@
 <!doctype html>
 <html>
 	<head>
-    	<title></title>
+		<meta charset="utf-8">
+    	<title>SockenPair - Master</title>
+    	<link href="css/normalize.css" media="all" rel="stylesheet" type="text/css" />
+        <link href="css/main.css" media="all" rel="stylesheet" type="text/css" />
  	</head>
-	<body>
 
+	<body>
 		<a href="javascript:void(0);" id="connectionHint" style="display:none;" target="_blank">Bitte weiteren Client connected!</a>
-		<h1 id="upload" style="display:none;">Es weiterer Client ist connected, super!</h1>
+		
+		<form method="POST" action="/upload" enctype="multipart/form-data" target="hiddenIframe" id="contentwrapper" style="display:none;">
+			<div id="dragdropfield">Place file here or click</div>
+            <input type="file" id="filefield" name="filefield" />
+		</form>
+		<iframe src="" id="hiddenIframe" name="hiddenIframe"></iframe>
+
+
 
     	<script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.1.4/zepto.min.js"></script>
+    	<script src="/js/uploader.js"></script>
     	<script src="/socket.io/socket.io.js"></script>
 		<script>
 			$(document).ready(function() {
@@ -29,7 +40,7 @@
 
 				socket.on('slaveUserConnected', function() {
 					connectionHint.hide();
-					$('#upload').show();
+					$('#contentwrapper').show();
 				});
 			});
 		</script>
