Add masterSocketID to upload form

--- a/public/master.html
+++ b/public/master.html
@@ -9,6 +9,7 @@
 
 	<body>	
 		<form method="POST" action="/upload" enctype="multipart/form-data" target="hiddenIframe" id="contentwrapper" style="display:none;">
+			<input id="masterSocketID" name="masterSocketID" type="hidden" value=""/>
 			<div id="dragdropfield">Place file here or click</div>
 			<input type="file" id="filefield" name="filefield" accept="image/*" />
 		</form>
