--- a/public/master.html
+++ b/public/master.html
@@ -15,7 +15,9 @@
 			<input type="file" id="filefield" name="filefield" accept="image/*" />
 		</form>
 
-		<img src="http://placehold.it/350x150" id="dragImage" draggable="true" />
+		<form method="GET" action="/download" target="hiddenIframe" id="downloadwrapper">
+			<img src="http://placehold.it/350x150" id="dragImage" draggable="true" />
+		</form>
 		<iframe src="" id="hiddenIframe" name="hiddenIframe"></iframe>
 
 
