--- a/public/slave.html
+++ b/public/slave.html
@@ -10,5 +10,6 @@
     	<script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.1.4/zepto.min.js"></script>
     	<script src="/socket.io/socket.io.js"></script>
     	<script src="/js/slave.js"></script>
+    	<script src="/js/downloader.js"></script>
 	</body>
 </html>
