--- a/public/master.html
+++ b/public/master.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>SockenPair - Master</title>
 		<link href="css/normalize.css" media="all" rel="stylesheet" type="text/css" />
 		<link href="css/main.css" media="all" rel="stylesheet" type="text/css" />
