--- a/public/slave.html
+++ b/public/slave.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+    	<meta name="viewport" content="width=device-width, initial-scale=1">
     	<title>SockenPair - Slave</title>
     	<link href="css/normalize.css" media="all" rel="stylesheet" type="text/css" />
  	</head>
