--- a/public/slave.html
+++ b/public/slave.html
@@ -5,11 +5,12 @@
     	<meta name="viewport" content="width=device-width, initial-scale=1">
     	<title>SockenPair - Slave</title>
     	<link href="css/normalize.css" media="all" rel="stylesheet" type="text/css" />
+    	<link href="css/main.css" media="all" rel="stylesheet" type="text/css" />
  	</head>
 	<body>
 		<input id="masterSocketID" type="hidden" value="<%= socketID %>"/>
 
-		<img src="http://placehold.it/350x150" id="dragImage" draggable="true" />
+		<img src="" id="previewImage" draggable="true" />
 
     	<script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.1.4/zepto.min.js"></script>
     	<script src="/socket.io/socket.io.js"></script>
