Implemented correct positioning of the images.

--- a/public/slave.html
+++ b/public/slave.html
@@ -10,7 +10,9 @@
 	<body>
 		<input id="masterSocketID" type="hidden" value="<%= socketID %>"/>
 
-		<img src="" id="previewImage" draggable="true" />
+        <div id="downloadwrapper">
+		    <img src="" id="previewImage" draggable="true" />
+        </div>
 
     	<script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.1.4/zepto.min.js"></script>
     	<script src="/socket.io/socket.io.js"></script>
