Add class to divide different download wrapper

--- a/public/slave.html
+++ b/public/slave.html
@@ -10,7 +10,7 @@
 	<body>
 		<input id="masterSocketID" type="hidden" value="<%= socketID %>"/>
 
-        <form method="POST" action="/download" target="hiddenIframe" id="downloadwrapper">
+        <form method="POST" action="/download" target="hiddenIframe" id="downloadwrapper" class="slave">
 		    <img src="" id="previewImage" name="previewImage" />
             <input type="hidden" name="previewImageHidden" id="previewImageHidden" value="" />
         </form>
